# AdditiveLab

./: .gitignore  .gitmodules  CMakeLists.txt  addclass.py
Development/VSCode/AddClass/: class.cpp  class.h
Source/: CMakeLists.txt
Source/AppBase/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  RootComponent.cpp  RootComponent.h
Source/Core/: CMakeLists.txt  Config.cpp  Config.h
Source/Gui/: CMakeLists.txt  HorizontalKeyboard.cpp  HorizontalKeyboard.h  Utils.h
Source/IO/: Audio.cpp  Audio.h  CMakeLists.txt  Midi.cpp
Source/Synth/: CMakeLists.txt  PolyphonicSound.cpp  PolyphonicSound.h  SawVoice.cpp  SawVoice.h  SineVoice.cpp  SineVoice.h
Source/System/: CMakeLists.txt  Render.cpp  Render.h  theLab.cpp  theLab.h
